# aws-backend

./: .gitignore  LICENSE  Makefile  docker-compose.yml  pyproject.toml  sam.yml
src/: put_dynamodb.py
tests/unit/: conftest.py  test_put_dynamodb.py
