[tool.poetry]
name = "aws-backend"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
boto3 = "^1.17.19"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
